# SimpleJenkinsAPI

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/SimpleJenkinsAPI/: __init__.py  __metadata__.py  api.py  cli.py  main.py
src/SimpleJenkinsCMD/: __init__.py  cmds.py  main.py
tests/: test_api.py
