# For setuptools configuration see https://setuptools.readthedocs.io.
[metadata]
name = SimpleJenkinsAPI
author = Carlos Meza
author-email = xsc27@digitalr00ts.com
description  = Lightweight wrapper for the CloudBees Jenkins API
description-content-type = text/plain
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/digitalr00ts/SimpleJenkinsAPI
project_url =
    Source = https://github.com/digitalr00ts/SimpleJenkins
    Tracker = https://github.com/digitalr00ts/SimpleJenkins/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    Jenkins

[options]
install_requires =
    dataclasses; python_version <"3.7"
    importlib_metadata; python_version <"3.8"
    httpx[http2, brotli]
packages = find:
package_dir =
    = src
requires-python = >=3.6
setup_requires =
    setuptools_scm[toml] >=3.4
zip_safe = False

[options.packages.find]
    where = src

[options.entry_points]
console_scripts =
    jenkinsapi = SimpleJenkinsAPI.cli:main

[options.extras_require]
lint =
    flakehell
    dlint
    #flake8-pytest-style
    pylint
    wemake-python-styleguide @ git+https://github.com/wemake-services/wemake-python-styleguide.git@67c6907
test =
    pytest[toml]
    coverage[toml]
    pytest-cov
